--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,30 @@
 </head>
 <body>
 
+<nav class="navbar navbar-light bg-faded">
+  <%= link_to 'Freebies', root_path, class: 'navbar-brand' %>
+  <ul class="nav navbar-nav">
+     <% unless user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to 'Log in', new_user_session_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Posts", class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Campaigns", class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Log out (#{current_user.username})", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+        </li>
+      <% end %>
+  </ul>
+</nav>
+
 <div class="container">
   <%= flash_messages %>
   <%= yield %>
