include active link to gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,20 +13,20 @@
   <ul class="nav navbar-nav">
      <% unless user_signed_in? %>
         <li class="nav-item">
-          <%= link_to 'Log in', new_user_session_path, class: 'nav-link' %>
+          <%= active_link_to 'Log in', new_user_session_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+          <%= active_link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Posts", class: 'nav-link' %>
+          <%= active_link_to "Posts", class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to "Campaigns", class: 'nav-link' %>
+          <%= active_link_to "Campaigns", class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to "Log out (#{current_user.username})", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+          <%= active_link_to "Log out (#{current_user.username})", destroy_user_session_path, method: :delete, class: 'nav-link' %>
         </li>
       <% end %>
   </ul>
