--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
           <%= active_link_to "Campaigns", class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= active_link_to "Log out (#{current_user.username})", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+          <%= active_link_to "Log out (#{current_user.email})", destroy_user_session_path, method: :delete, class: 'nav-link' %>
         </li>
       <% end %>
   </ul>
