--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,4 @@
 // Custom bootstrap variables must be set or import before bootstrap itself.
 @import "bootstrap";
+@import "campaigns";
+@import "font-awesome";
