--- a/app/views/campaigns/_campaign.html.erb
+++ b/app/views/campaigns/_campaign.html.erb
@@ -1,5 +1,6 @@
 <div class="card-block">
-  <h6 class="card-title" style="margin-bottom: 0"><%= campaign.title %></h6>
+  <h6 class="card-title" style="margin-bottom: 0">
+    <%= link_to campaign.title, campaign_path(campaign) %></h6>
 </div>
 
 <%= image_tag(campaign.image_url, class: "card-img-top img-responsive") %>
