--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,24 +11,27 @@
 <nav class="navbar navbar-light bg-faded">
   <%= link_to 'Freebies', root_path, class: 'navbar-brand' %>
   <ul class="nav navbar-nav">
-     <% unless user_signed_in? %>
-        <li class="nav-item">
-          <%= active_link_to 'Log in', new_user_session_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= active_link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
-        </li>
-      <% else %>
-        <li class="nav-item">
-          <%= active_link_to "Posts", class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= active_link_to "Campaigns", class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= active_link_to "Log out (#{current_user.email})", destroy_user_session_path, method: :delete, class: 'nav-link' %>
-        </li>
-      <% end %>
+    <% unless user_signed_in? %>
+      <li class="nav-item">
+        <%= active_link_to 'Log in', new_user_session_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= active_link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+      </li>
+    <% else %>
+      <li class="nav-item">
+        <%= active_link_to "Posts", class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= active_link_to "Campaigns", class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= active_link_to "Log out (#{current_user.email})", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+      </li>
+    <% end %>
+    <li class="nav-item">
+      <%= active_link_to "Our Campaigns", campaigns_path, class: 'nav-link' %>
+    </li>
   </ul>
 </nav>
 
