--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -4,6 +4,8 @@
       <div class="hero-img hidden-sm-down" style="background-image: url(<%= @campaign.image_url %>); background-size: cover;"> </div>
       <div class="container">
         <h1> <%= @campaign.title %> </h1> 
+        <!-- Go to www.addthis.com/dashboard to customize your tools -->
+        <div class="addthis_native_toolbox"></div>
       
         <hr/>
         <div class="col-md-12">
