--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-569662315d82736c" async="async"></script>
 
 <nav class="navbar navbar-light bg-faded">
   <%= link_to 'Freebies', root_path, class: 'navbar-brand' %>
