--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -28,10 +28,10 @@
         <div class="col-md-6">
           <h3> Campaign will end in 23 days </h3> 
           
-          <h4> Money </h4> 
-          <progress class="progress progress-striped progress-success" value="25" max="100">25% Money collected</progress>
-          <h4> Books </h4>
-          <progress class="progress progress-striped progress-info" value="50" max="100">50% Book collected</progress>
+          <% @campaign.campaign_items.each do |item| %>
+          <h4> <%= "#{item.label} - #{item.progress}%" %> </h4> 
+          <progress class="progress progress-striped progress-success" value="<%= item.progress %>" max="100"></progress>
+          <% end %>s
 
           <p>We will collect books at your place. For money, you can send us via Vietcombank Account Name / Number / Bank Branch </p>
           <p>
