--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -23,6 +23,8 @@
             <i class="fa fa-heart"></i>
             <i class="fa fa-heart"></i>
           </div>
+          
+          <div class="fb-comments" data-href="<%= request.original_url %>" data-numposts="5"></div>
         </div>
 
         <div class="col-md-6">
@@ -41,6 +43,7 @@
         <div class="col-md-12">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62713.09674534687!2d106.66230720000001!3d10.767697100000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752ee868cafa03%3A0x0670a0b58b4ecb95!2zTmd1eeG7hW4gTmfhu41jIEzhu5ljLCBwaMaw4budbmcgMTQsIFF14bqtbiAxMCwgSOG7kyBDaMOtIE1pbmgsIFZpZXRuYW0!5e0!3m2!1sen!2s!4v1452694130802" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
+
 
         <div class="col-md-12">
           <h3> Hornorable donations </h3>
