--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -9,41 +9,33 @@
       
         <hr/>
         <div class="col-md-12">
-          <a href="#donations"><span><b>100 donations</b></span></a> | 
-          <a href="#money"><span><b>34 Mil VND</b></span></a> |
-          <a href="#books"><span><b>200 books</b></span></a> 
+          <a href="#donations"><span><b><%= "#{@campaign.donations.count} đóng góp" %></b></span></a> | 
+          
+          <% @campaign.campaign_items.each do |item| %>
+            <a href="#money"><span><b><%= "#{item.collected_qty} #{item.label}" %></b></span></a> |
+          <% end %>
         </div>
 
         <div class="extended-description col-md-6">
           <%= @campaign.description %>
-          <div>
-            <i class="fa fa-heart"></i>
-            <i class="fa fa-heart"></i>
-            <i class="fa fa-heart"></i>
-            <i class="fa fa-heart"></i>
-            <i class="fa fa-heart"></i>
-          </div>
-          
-          <div class="fb-comments" data-href="<%= request.original_url %>" data-numposts="5"></div>
-        </div>
+          <div class="fb-comments" data-href="<%= request.original_url %>" data-numposts="5"></div></div>
 
         <div class="col-md-6">
-          <h3> Campaign will end in 23 days </h3> 
+          <h3> <%= "Quyên góp sẽ kết thúc trong #{@campaign.remaining_days} ngày nữa" %> </h3> 
           
           <% @campaign.campaign_items.each do |item| %>
-          <h4> <%= "#{item.label} - #{item.progress}%" %> </h4> 
-          <progress class="progress progress-striped progress-success" value="<%= item.progress %>" max="100"></progress>
-          <% end %>s
+            <h4> <%= "#{item.label} - #{item.progress}%" %> </h4> 
+            <progress class="progress progress-striped progress-success" value="<%= item.progress %>" max="100"></progress>
+          <% end %>
 
           <p>We will collect books at your place. For money, you can send us via Vietcombank Account Name / Number / Bank Branch </p>
           <p>
-          <span>Want to contribute, <button type="button" class="btn btn-success">Message Us!</button></span></p>
+          <span>Bạn muốn quyên góp? <button type="button" class="btn btn-success">Liên hệ</button></span></p>
         </div>
 
         <div class="col-md-12">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62713.09674534687!2d106.66230720000001!3d10.767697100000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752ee868cafa03%3A0x0670a0b58b4ecb95!2zTmd1eeG7hW4gTmfhu41jIEzhu5ljLCBwaMaw4budbmcgMTQsIFF14bqtbiAxMCwgSOG7kyBDaMOtIE1pbmgsIFZpZXRuYW0!5e0!3m2!1sen!2s!4v1452694130802" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
-
 
         <div class="col-md-12">
           <h3> Hornorable donations </h3>
