--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
 // Custom bootstrap variables must be set or import before bootstrap itself.
 @import "bootstrap";
-@import "campaigns";
 @import "font-awesome";
+@import 'chosen';
+
+@import "campaigns";
+@import "conversations";
