improve avatar select

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "bootstrap";
 @import "font-awesome";
 @import 'chosen';
+@import 'ImageSelect';
 
 @import "campaigns";
 @import "conversations";
