--- a/app/views/admin/campaigns/_form.html.erb
+++ b/app/views/admin/campaigns/_form.html.erb
@@ -1,10 +1,9 @@
-<%= simple_form_for(@post) do |f| %>
+<%= simple_form_for(@campaign) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.input :description %>
-    <%= f.input :location %>
+    <%= f.input :description, as: :text %>
     <%= f.input :image, as: :file, class: 'form-control' %>
   </div>
 
