--- a/app/views/admin/campaigns/show.html.erb
+++ b/app/views/admin/campaigns/show.html.erb
@@ -15,4 +15,4 @@
   <%= image_tag @campaign.image_url %>
 </p>
 
-<%= link_to 'Edit', edit_admin_campaign_path(@campaign) %> |
+<%= link_to 'Edit', edit_admin_campaign_path(@campaign) %>
