--- a/app/views/admin/campaigns/_form.html.erb
+++ b/app/views/admin/campaigns/_form.html.erb
@@ -1,10 +1,10 @@
-<%= simple_form_for(@campaign) do |f| %>
+<%= simple_form_for @campaign, :url => admin_campaign_path(@campaign), :method => :put do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description, as: :text %>
-    <%= f.input :image, as: :file, class: 'form-control' %>
+    <%= f.input :image_url %>
   </div>
 
   <div class="form-actions">
