--- a/app/views/admin/campaigns/edit.html.erb
+++ b/app/views/admin/campaigns/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Post</h1>
+<h1>Editing Campaign</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
