create basic campaign

--- a/app/views/admin/campaigns/index.html.erb
+++ b/app/views/admin/campaigns/index.html.erb
@@ -1,4 +1,7 @@
 <h2>Campaigns</h2>
+
+<%= link_to "New campaign", new_admin_campaign_path %>
+
 <div class="table-responsive">
   <table class="table table-striped">
     <thead>
