--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -18,7 +18,7 @@
 
   <body>
     <nav class="navbar navbar-dark navbar-fixed-top bg-inverse">
-      <a class="navbar-brand" href="#">Freebie</a>
+      <%= link_to "Freebie", root_path, class: "navbar-brand" %>
     </nav>
 
     <div class="container-fluid">
