add more field to campaign

--- a/app/views/admin/campaigns/new.html.erb
+++ b/app/views/admin/campaigns/new.html.erb
@@ -6,6 +6,8 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description, as: :text %>
+    <%= f.input :donation_instruction, as: :text %>
+    <%= f.input :gmap_location, as: :text %>
     <%= f.input :image_url %>
   </div>
 
