--- a/app/views/admin/campaigns/show.html.erb
+++ b/app/views/admin/campaigns/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to "View", campaign_path(@campaign) %>
+
 <p>
   <strong>Title:</strong>
   <%= @campaign.title %>
@@ -8,6 +10,21 @@
 <p>
   <strong>Description:</strong>
   <%= @campaign.description %>
+</p>
+
+<p>
+  <strong>End Date:</strong>
+  <%= @campaign.end_date %>
+</p>
+
+<p>
+  <strong>Donation Instruction:</strong>
+  <%= @campaign.donation_instruction %>
+</p>
+
+<p>
+  <strong>Gmap Location:</strong>
+  <%= @campaign.gmap_location %>
 </p>
 
 <p>
