--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -5,7 +5,7 @@
       <div class="container">
         <h1> <%= @campaign.title %> </h1> 
         <!-- Go to www.addthis.com/dashboard to customize your tools -->
-        <div class="addthis_native_toolbox"></div>
+        <div class="addthis_sharing_toolbox"></div>
       
         <hr/>
         <div class="col-md-12">
