--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
       </li>
     <% else %>
       <li class="nav-item">
-        <%= active_link_to "Posts", root_path, class: 'nav-link' %> <!-- Edit root_path to correct post_path -->
+        <%= active_link_to "Posts", posts_path, class: 'nav-link' %> <!-- Edit root_path to correct post_path -->
       </li>
       <li class="nav-item">
         <%= active_link_to "Our Campaigns", campaigns_path, class: 'nav-link' %>
