minor fix on layout and navigation flow

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -17,4 +17,5 @@
   </div>
 
   <%= submit_tag 'Send', class: 'btn btn-primary' %>
+  <%= link_to "Back", :back, class: 'btn btn-link' %>
 <% end %>
