--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -34,7 +34,7 @@
         </div>
 
         <div class="col-md-12">
-          <%= @campaign.gmap_location.html_safe %>
+          <%= @campaign.location %>
         </div>
 
         <div class="col-md-12">
