--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,16 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  
+  <% if content_for?(:meta_og) %>
+      <%= yield :meta_og %>
+  <% else %>
+      <meta property="og:title" content="Freebie Community" />
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="http://freebie.vn" />
+      <%= tag :meta, property: 'og:image', content: image_url('freebie.jpg') %>
+  <% end %>
+
 </head>
 <body>
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
