--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,3 +1,14 @@
+<%= content_for(:meta_og) do %>
+    <meta property="og:title" content="<%= @campaign.title %>" />
+    <meta property="og:type" content="article" />
+    <meta property="og:published_time" content="<%= @campaign.created_at.strftime('%Y-%m-%d %H:%M') %>" />
+    <meta property="og:description" content="<%= truncate(strip_tags( @campaign.description ), length: 50) %>" />
+    <% if @campaign.image_url %>
+        <%= tag :meta, property: 'og:image', content: "http://#{request.host}#{@campaign.image_url}" %>
+    <% end %>
+<% end %>
+
+
 <div class="container-fluid no-pad events-detail">
   <div class="row no-pad">
     <div class="col-md-12 event-content">
