add campaign and style menu

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,3 +15,8 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+<script type="text/javascript">
+	$(".nav-item").removeClass("active");
+	$(".nav-item.signup").addClass("active");
+</script>
