--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,251 @@
 @import "font-awesome";
 @import 'chosen';
 @import 'ImageSelect';
+@import "variables";
+@import "common";
 
 @import "campaigns";
 @import "conversations";
+@import "welcome";
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  color: #888;
+  font-size: 13px;
+  line-height: 1.5;
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 169px;
+  z-index: 999;
+
+  background-color: $bg_color;
+
+  .brand {
+    height: 100px;
+
+    a {
+      text-decoration: none;
+    }
+
+    .fa {
+      color: #FE9322;
+      font-size: 50px;
+      position: relative;
+      top: 11px;
+      padding: 10px;
+    }
+
+    .brand-name {
+      font-size: 26px;
+      font-weight: bold;
+
+      line-height: 100px;
+    }
+
+    .brand-first-name {
+      color: $primary_color;
+    }
+
+    .brand-last-name {
+      color: $secondary_color;
+      margin-left: -2px;
+    }
+  }
+
+  .navbar-header {
+    &.is-visible {
+      .nav {
+        display: block !important;
+      }
+    }
+
+    background: rgb(245, 245, 245);
+    .navbar-container {
+      
+      .navbar {
+        background-color: transparent;
+        border-radius: none;
+
+        padding-top: 0;
+        padding-bottom: 0;
+
+        .nav {
+        }
+
+        form {
+          padding: 20px 0;
+
+          input {
+            padding-right: 32px;
+
+            &:focus {
+              border-color: $primary_color;
+            }
+          }
+
+          button {
+            border: none;
+            position: relative;
+            left: -50px;
+
+            color: $primary_color;
+            background: transparent;
+          }
+        }
+
+        .cd-secondary-nav-trigger {
+          color: $secondary_color;
+          font-size: 30px;
+
+          position: absolute;
+          top: 16px;
+          right: 16px;
+        }
+
+        .nav-item {
+          margin-left: 0;
+          
+          &:hover {
+            a {
+              @include highlight();
+            }
+          }
+
+          &.active {
+            a {
+              @include highlight();
+            }
+          }
+
+          a {
+            border-top: solid 4px transparent;
+
+            -o-transition: border .3s linear;
+            -moz-transition: border .3s linear;
+
+            -webkit-transition: border .3s linear;
+            transition: border .3s linear;
+
+            outline: 0;
+            line-height: 1.42857143;
+
+            color: #444;
+            font-size: 13px;
+            font-weight: 400;
+
+            display: inherit;
+            line-height: 42px;
+            padding-top: 0;
+          }
+        }
+      }
+    }
+  }
+}
+
+.onboarding-container {
+  display: none;
+
+  position: fixed;
+  top: 200px;
+  width: 100%;
+  height: auto;
+  text-align: center;
+  z-index: 9999;
+
+  .content {
+    width: 800px;
+    margin: auto;
+    display: inline-block;
+
+    padding: 30px 50px;
+
+    background-color: rgba(0, 0, 0, 0.85);
+
+    .fa-close {
+      float: right;
+      position: relative;
+      top: -20px;
+      left: 40px;
+
+      font-size: 26px;
+      color: #fff;
+      
+      cursor: pointer;
+    }
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: inline-block;
+
+      a {
+        text-decoration: none;
+
+        li {
+          display: inline-block;
+          float: left;
+          margin: 0 10px;
+
+          width: 180px;
+          height: 180px;
+          
+          border-radius: 180px;
+          padding: 20px;
+
+          background-color: #5bc0de;
+
+          &:hover {
+            box-shadow: 0px 6px 6px rgba(91, 192, 222, 0.39);
+          }   
+        }
+
+        &:first-child {
+          li {
+            background-color: #d9534f;
+
+            &:hover {
+              box-shadow: 0px 6px 6px rgba(217, 83, 79, 0.39);
+            } 
+          }           
+        } 
+
+        &:last-child {
+          li {
+            background-color: $primary_color;
+
+            &:hover {
+              box-shadow: 0px 6px 6px rgba(254, 147, 34, 0.39);
+            } 
+          }           
+        } 
+
+        .fa {
+          font-size: 50px;
+          color: #CCC;
+        }
+
+        p {
+          font-size: 20px;
+          color: $bg_color;
+
+          margin-top: 7px;
+
+          font-weight: bold;
+        }
+      }
+    }
+  }
+}
+
+.main-content {
+  margin-top: 178px;
+}
+
+@import "multi-screen";
