--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,148 @@
-// Place all the styles related to the welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#carousel-campaign-list {
+  .carousel-inner {
+    text-align: center;
+
+    .carousel-item {
+      height: 500px;
+      overflow: hidden;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+
+      progress {
+        position: absolute;
+        bottom: -16px;
+      }
+
+      .description {
+        position: absolute;
+        bottom: 16px;
+        overflow: hidden;
+
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.65);
+
+        text-align: left;
+        padding: 10px;
+
+        color: #fff;
+
+        h1 {
+          color: $primary_color;
+        }
+
+        p {
+          font-size: 15px;
+        }
+
+        .campaign-info {
+          float: right;
+
+          .title {
+            font-weight: bold;
+            font-size: 10px;
+            vertical-align: bottom;
+          }
+
+          .value {
+            font-size: 13px;
+          }
+        }
+      }
+
+      &.carousel-anim {
+        progress {
+          opacity: 0;
+          animation: amin_for_progress 1s ease-in-out 2.6s forwards;
+        }
+
+        .description {
+          h1 {
+            position: relative;
+            opacity: 0;
+            animation: top_down 1s ease-in-out 0.3s forwards;
+          }
+
+          p {
+            position: relative;
+            opacity: 0;
+            animation: right_to_left 1s ease-in 1s forwards;
+          }
+
+          .campaign-info {
+            position: relative;
+            opacity: 0;
+            animation: bottom_up 0.6s ease-out 2s forwards;
+          }
+        }
+      }
+    }
+  }
+
+  .carousel-control {
+    background-image: none;
+
+    &:hover {
+      color: $primary_color;
+    }
+
+    .icon-prev, .icon-next {
+      font-size: 80px;
+      top: 42%;
+    }
+  }
+}
+
+
+
+
+
+@keyframes top_down {
+  from {
+    top: -60px;
+    opacity: 0;
+  }
+
+  to {
+    top: 0px;
+    opacity: 1;
+  }
+}
+
+@keyframes right_to_left {
+  from {
+    left: 105%;
+    opacity: 0;
+  }
+
+  to {
+    left: 0px;
+    opacity: 1;
+  }
+}
+
+@keyframes bottom_up {
+  from {
+    top: 30px;
+    opacity: 0;
+  }
+
+  to {
+    top: 0px;
+    opacity: 1;
+  }
+}
+
+@keyframes amin_for_progress {
+  from {
+    bottom: -32px;
+    opacity: 0;
+  }
+
+  to {
+    bottom: -16px;
+    opacity: 1;
+  }
+}
