--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,7 +5,7 @@
     <%= f.input :title %>
     <%= f.input :description %>
     <%= f.input :location %>
-    <%= f.input :image, as: :file, class: 'form-control' %>
+    <%= f.input :main_image, as: :file, class: 'form-control' %>
   </div>
 
   <div class="form-actions">
