--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Image url:</strong>
-  <%= image_tag @post.main_image.url %>
+  <%= image_tag @post.main_image_url %>
 </p>
 
 <p>
