--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -69,3 +69,104 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+
+<div class="post-list container">
+  <div class="row">
+    <div class="card col-md-3">
+      <img class="card-img-top" src="http://static1.cafeland.vn/cafelandData/upload/tintuc/xuhuongcamnang/2013/05/tuan-03/ghe-4-1368712652.jpg" alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      <div class="card-block">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
+
+    <div class="card col-md-3">
+      <img class="card-img-top" src="http://static1.cafeland.vn/cafelandData/upload/tintuc/xuhuongcamnang/2013/05/tuan-03/ghe-4-1368712652.jpg" alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      <div class="card-block">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
+
+    <div class="card col-md-3">
+      <img class="card-img-top" src="http://static1.cafeland.vn/cafelandData/upload/tintuc/xuhuongcamnang/2013/05/tuan-03/ghe-4-1368712652.jpg" alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      <div class="card-block">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
+
+    <div class="card col-md-3">
+      <img class="card-img-top" src="http://static1.cafeland.vn/cafelandData/upload/tintuc/xuhuongcamnang/2013/05/tuan-03/ghe-4-1368712652.jpg" alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      <div class="card-block">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
+
+    <div class="card col-md-3">
+      <img class="card-img-top" src="http://static1.cafeland.vn/cafelandData/upload/tintuc/xuhuongcamnang/2013/05/tuan-03/ghe-4-1368712652.jpg" alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      <div class="card-block">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
+
+    <div class="card col-md-3">
+      <img class="card-img-top" src="http://static1.cafeland.vn/cafelandData/upload/tintuc/xuhuongcamnang/2013/05/tuan-03/ghe-4-1368712652.jpg" alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      <div class="card-block">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
+
+    <div class="card col-md-3">
+      <img class="card-img-top" src="http://static1.cafeland.vn/cafelandData/upload/tintuc/xuhuongcamnang/2013/05/tuan-03/ghe-4-1368712652.jpg" alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      <div class="card-block">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
+
+    <div class="card col-md-3">
+      <img class="card-img-top" src="http://static1.cafeland.vn/cafelandData/upload/tintuc/xuhuongcamnang/2013/05/tuan-03/ghe-4-1368712652.jpg" alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      <div class="card-block">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
+  </div>
+
+</div>
