--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,6 +80,9 @@ body {
         }
 
         form {
+          position: absolute;
+          top: -88;
+          right: 0;
           padding: 20px 0;
 
           input {
