--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,11 +41,14 @@
         <a href="" class="cd-secondary-nav-trigger"><%= fa_icon "bars" %></a>
         <ul class="nav navbar-nav">
           <% unless user_signed_in? %>
-            <li class="nav-item login">
-              <%= active_link_to 'Log in', new_user_session_path, class: 'nav-link' %>
+            <li class="nav-item posts">
+              <%= active_link_to "Freebie", root_path, class: 'nav-link' %> <!-- Edit root_path to correct post_path -->
             </li>
-            <li class="nav-item signup">
-              <%= active_link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+            <li class="nav-item compaigns">
+              <%= active_link_to "Our Campaigns", campaigns_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item login pull-xs-right">
+              <%= active_link_to 'Log in', new_user_session_path, class: 'nav-link' %>
             </li>
           <% else %>
             <li class="nav-item posts">
