--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -28,6 +28,7 @@
             <li><%= link_to "Campaigns", admin_campaigns_path, class: 'nav-item nav-link' %></li>
             <li><a href="#">Posts</a></li>
             <li><a href="#">Messages</a></li>
+            <li><a href="<%= edit_user_path(current_user) %>">Profile</a></li>
           </ul>
         </div>
 
