--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -8,7 +8,6 @@
     <% end %>
 <% end %>
 
-
 <div class="container-fluid no-pad events-detail">
   <div class="row no-pad">
     <div class="col-md-12 event-content">
@@ -40,8 +39,24 @@
           <% end %>
 
           <p><%= @campaign.donation_instruction %></p>
-          <p>
-          <span>Bạn muốn quyên góp? <button type="button" class="btn btn-success">Liên hệ</button></span></p>
+          <p><span>Chúng tôi trân trọng mọi đóng góp. Hãy để lại tin nhắn, chúng tôi sẽ liên lạc trong vòng 24h để đón nhận đóng góp của bạn</span></p>
+          <%= form_tag('/campaigns/' + @campaign.id.to_s + '/ask_to_donate', method: 'post') %>
+            <fieldset class="form-group">
+              <input type="text" class="form-control" name="donation[name]" placeholder="Tên của bạn">
+            </fieldset>
+            <fieldset class="form-group">
+              <input type="text" class="form-control" name="donation[email_or_phone]" placeholder="Email / số điện thoại">
+            </fieldset>
+            <fieldset class="form-group">
+              <input type="text" class="form-control" name="donation[address]" placeholder="Địa chỉ">
+            </fieldset>
+            <fieldset class="form-group">
+              <textarea class="form-control" name="donation[message]" rows="3" placeholder="Nội dung đóng góp"></textarea>
+            </fieldset>
+            <button type="submit" class="btn btn-danger">
+              Nhắn tin cho chúng tôi
+            </button>
+          </form>
         </div>
 
         <div class="col-md-12">
@@ -56,6 +71,7 @@
             <% end %>
           </ul>
         </div>
+
       </div>  
     </div>
   </div>
