--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,15 @@
 <html>
 <head>
   <title>Freebie</title>
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.1.1/js/tether.min.js"></script>  
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+
+
+  
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <% if content_for?(:meta_og) %>
@@ -71,11 +77,8 @@
                 <% end %>
               <% end %>
             </li>
-            <li class="nav-item edit-profile">
-              <%= active_link_to "Edit Profile", edit_user_registration_path, class: 'nav-link' %>
-            </li>
             <li class="nav-item logout">
-              <%= active_link_to "Log out (#{current_user.email})", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+              <%= active_link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link' %>
             </li>
           <% end %>
         </ul>
