--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,62 +4,13 @@
     <li data-target="#carousel-campaign-list" data-slide-to="1"></li>
     <li data-target="#carousel-campaign-list" data-slide-to="2"></li>
   </ol>
+  
   <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active">
-      <img src="http://kodesolution.com/demo/nonprofit/charityfund-html/images/bg/bg5.jpg">
-      <progress class="progress progress-striped progress-animated progress-success" value="70" max="100">70%</progress>
-       <div class="description">
-        <h1>Trợ cấp cho trẻ em nghèo</h1>
-        <p>Quyên góp cho trẻ em nghèo, để các em có điều kiện cấp sách tới trường</p>
-        <div class="campaign-info">
-          <span class="raised">
-            <span class="title"><%= I18n.t ".raised_title" %></span>
-            <span class="value label label-pill label-success">7.000.000 <%= I18n.t ".value_unit" %></span>
-          </span>
-          <span class="gold">
-            <span class="title"><%= I18n.t ".goal_title" %></span>
-            <span class="value label label-pill label-danger">10.000.000 <%= I18n.t ".value_unit" %></span>
-          </span>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="http://kodesolution.com/demo/nonprofit/charityfund-html/images/bg/bg5.jpg">
-      <progress class="progress progress-striped progress-animated progress-success" value="70" max="100">70%</progress>
-       <div class="description">
-        <h1>Trợ cấp cho trẻ em nghèo</h1>
-        <p>Quyên góp cho trẻ em nghèo, để các em có điều kiện cấp sách tới trường</p>
-        <div class="campaign-info">
-          <span class="raised">
-            <span class="title"><%= I18n.t ".raised_title" %></span>
-            <span class="value label label-pill label-success">7.000.000 <%= I18n.t ".value_unit" %></span>
-          </span>
-          <span class="gold">
-            <span class="title"><%= I18n.t ".goal_title" %></span>
-            <span class="value label label-pill label-danger">10.000.000 <%= I18n.t ".value_unit" %></span>
-          </span>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="http://kodesolution.com/demo/nonprofit/charityfund-html/images/bg/bg5.jpg">
-      <progress class="progress progress-striped progress-animated progress-success" value="70" max="100">70%</progress>
-      <div class="description">
-        <h1>Trợ cấp cho trẻ em nghèo</h1>
-        <p>Quyên góp cho trẻ em nghèo, để các em có điều kiện cấp sách tới trường</p>
-        <div class="campaign-info">
-          <span class="raised">
-            <span class="title"><%= I18n.t ".raised_title" %></span>
-            <span class="value label label-pill label-success">7.000.000 <%= I18n.t ".value_unit" %></span>
-          </span>
-          <span class="gold">
-            <span class="title"><%= I18n.t ".goal_title" %></span>
-            <span class="value label label-pill label-danger">10.000.000 <%= I18n.t ".value_unit" %></span>
-          </span>
-        </div>
-      </div>
-    </div>
+    <% @campaigns.each_with_index do |campaign, index| %>
+      <%= render partial: 'campaign', locals: {campaign: campaign, index: index} %>
+    <% end %>
   </div>
+
   <a class="left carousel-control" href="#carousel-campaign-list" role="button" data-slide="prev">
     <span class="icon-prev" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
