--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td><%= post.title %></td>
         <td><%= truncate( post.description, length: 50) %></td>
-        <td><%= image_tag post.main_image_url %></td>
+        <td><%= image_tag post.main_image.url %></td>
         <td><%= post.location %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
