--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,13 @@
   <title>Freebie</title>
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.1.1/js/tether.min.js"></script>  
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.1.1/js/tether.min.js"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
 
 
-  
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <% if content_for?(:meta_og) %>
@@ -66,7 +66,7 @@
 
           <% unless user_signed_in? %>
             <li class="nav-item login pull-xs-right">
-              <%= active_link_to 'Log in', new_user_session_path, class: 'nav-link' %>
+              <%= active_link_to I18n.t("login"), new_user_session_path, class: 'nav-link' %>
             </li>
           <% else %>
             <li class="nav-item">
