--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
             </li>
           <% else %>
             <li class="nav-item">
-              <%= active_link_to conversations_path, class: 'nav-link' do %>
+              <%= active_link_to admin_conversations_path, class: 'nav-link' do %>
                 Messages
                 <% if current_user.unread_inbox_count > 0 %>
                   <span class="label label-pill label-danger"><%= current_user.unread_inbox_count %></span>
