--- a/app/views/admin/messages/new.html.erb
+++ b/app/views/admin/messages/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Start conversation</h2>
 
-<%= form_tag messages_path, method: :post do %>
+<%= form_tag admin_messages_path, method: :post do %>
   <div class="form-group">
     <%= label_tag 'recipients', 'Choose recipients' %>
     <%= select_tag 'recipients', recipients_options, multiple: true, class: 'form-control chosen-it' %>
