--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
   <div class="navbar-header">
     <div class="navbar-container container">
       <nav class="navbar navbar-light bg-faded">
-        <form class="form-inline pull-xs-right">
+        <form class="form-search form-inline pull-xs-right">
           <input class="form-control" type="text" placeholder="<%= I18n.t "search_placeholder" %>">
           <button class="btn" type="submit">
             <%= fa_icon "search" %>
@@ -50,30 +50,39 @@
         </form>
         <a href="" class="cd-secondary-nav-trigger"><%= fa_icon "bars" %></a>
         <ul class="nav navbar-nav">
+          <li class="nav-item posts">
+            <%= active_link_to I18n.t('menu_item_posts'), root_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item compaigns">
+            <%= active_link_to I18n.t("menu_item_campaigns"), campaigns_path, class: 'nav-link' %>
+          </li>
+
           <% unless user_signed_in? %>
-            <li class="nav-item posts">
-              <%= active_link_to "Freebie", root_path, class: 'nav-link' %> <!-- Edit root_path to correct post_path -->
-            </li>
-            <li class="nav-item compaigns">
-              <%= active_link_to "Our Campaigns", campaigns_path, class: 'nav-link' %>
-            </li>
             <li class="nav-item login pull-xs-right">
-              <%= active_link_to 'Log in', new_user_session_path, class: 'nav-link' %>
+              <%= active_link_to I18n.t("menu_item_login"), new_user_session_path, class: 'nav-link' %>
             </li>
           <% else %>
-            <li class="nav-item">
+            <li class="nav-item edit-profile pull-xs-right">
+              <div class="btn-group">
+                <div type="button" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <img src="<%= avatar_url_for current_user, 30 %>">
+                </div>
+                <div class="dropdown-menu">
+                  <%= active_link_to I18n.t("menu_item_edit_profile"), edit_user_registration_path, class: 'dropdown-item' %>
+                  <div class="dropdown-divider"></div>
+                  <%= active_link_to I18n.t("menu_item_logout"), destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
+                </div>
+              </div>
+            </li>
+
+            <li class="nav-item message pull-xs-right">
               <%= active_link_to conversations_path, class: 'nav-link' do %>
-                Messages
+                <%= fa_icon "comments" %>
+                <span class="label label-pill label-danger"><%= current_user.unread_inbox_count %></span>
                 <% if current_user.unread_inbox_count > 0 %>
                   <span class="label label-pill label-danger"><%= current_user.unread_inbox_count %></span>
                 <% end %>
               <% end %>
-            </li>
-            <li class="nav-item edit-profile">
-              <%= active_link_to "Edit Profile", edit_user_registration_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item logout">
-              <%= active_link_to "Log out (#{current_user.email})", destroy_user_session_path, method: :delete, class: 'nav-link' %>
             </li>
           <% end %>
         </ul>
@@ -90,26 +99,32 @@
 <div class="onboarding-container">
   <div class="content">
     <%= fa_icon "close" %>
-    <ul>
-      <a href="">
-        <li>
-          <%= fa_icon "search" %>
-          <p><%= I18n.t "search_for_whole_post" %></p>
-        </li>
-      </a>
-      <a href="">
-        <li>
-          <%= fa_icon "archive" %>
-          <p><%= I18n.t "give_your_old_stuffs" %></p>
-        </li>
-      </a>
-      <a href="">
-        <li>
-          <%= fa_icon "life-ring" %>
-          <p><%= I18n.t "create_new_campaigns" %></p>
-        </li>
-      </a>
-    </ul>
+    <section>
+      <div class="welcome-message">
+        <h1><%= I18n.t "onboarding_welcome" %></h1>
+        <h4><%= I18n.t "onboarding_instruction" %></h4>
+      </div>
+      <ul>
+        <a href="<%= posts_path %>">
+          <li>
+            <%= fa_icon "search" %>
+            <p><%= I18n.t "search_for_whole_post" %></p>
+          </li>
+        </a>
+        <a href="<%= new_post_path %>">
+          <li>
+            <%= fa_icon "archive" %>
+            <p><%= I18n.t "give_your_old_stuffs" %></p>
+          </li>
+        </a>
+        <a href="<%= campaigns_path %>">
+          <li>
+            <%= fa_icon "life-ring" %>
+            <p><%= I18n.t "create_new_campaigns" %></p>
+          </li>
+        </a>
+      </ul>
+    </section>
   </div>
 </div>
 
