change alert background color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -357,7 +357,7 @@ body {
   }
 
   &.alert-info {
-    background-color: #fe9322;
+    background-color: $primary_color;
     color: #fff;
     border: none;
     font-size: 22px;
